syntax = "proto3";

package bs;

option java_multiple_files = true;
option java_package = "com.lazycece.grpc.bs.proto";
option java_outer_classname = "BStreamProto";

// 定义服务
service BStreamService {
    rpc sayHello (stream HelloRequest) returns (stream HelloResponse) {}
}

// 定义请求体负载
message HelloRequest {
    string name = 1;
}

// 定义返回体负载
message HelloResponse {
    string message = 1;
}
